--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,13 @@
-/*# sourceMappingURL=style.css.map */
+.course-spn {
+  font-weight: 700;
+}
+
+.course-text {
+  text-align: center;
+  padding: 16px 0;
+  font-size: 15px;
+}
+
+.course-discount {
+  background-color: #c2e9eb;
+}/*# sourceMappingURL=style.css.map */
