--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,38 @@ body {
 }
 
 .container {
-  max-width: 1540px;
-  margin: 0 auto;
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto;
 }
 
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+}
 * {
   margin: 0;
   box-sizing: border-box;
@@ -31,16 +59,13 @@ a {
   font-size: 15px;
 }
 
-.course-discount {
-  background-color: #c2e9eb;
-}
-
 .header__main {
   display: flex;
   align-items: center;
   gap: 20px;
   justify-content: center;
   padding: 12px 24px;
+  box-shadow: 2px 2px 2px silver;
 }
 
 .header__menu {
@@ -84,4 +109,27 @@ a {
   background-color: white;
   border: 3px solid #6d28d2;
   padding: 15px;
+}
+
+.header__topColor {
+  background-color: #c2e9eb;
+}
+
+.hero {
+  padding: 64px 0 140px 0;
+  background-image: url("/assets/hero main.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.hero__skills-box {
+  background-color: #fff;
+  padding: 24px;
+  max-width: 40%;
+  margin-left: 40px;
+}
+
+.hero__title {
+  font-size: 30px;
+  margin-bottom: 8px;
 }/*# sourceMappingURL=style.css.map */
