--- a/sass/_generals.scss
+++ b/sass/_generals.scss
@@ -1,15 +1,48 @@
-.container{
-    max-width: 1540px;
-    margin: 0 auto;
+.container {
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto;
 }
-*{
-    margin: 0;
-    box-sizing: border-box;
-    padding: 0;
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
 }
-ul{
-    list-style: none;
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
 }
-a{
-    text-decoration: none;
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+* {
+  margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+}
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
 }
