--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -7,15 +7,14 @@
   font-size: 15px;
 }
 
-.course-discount {
-  background-color: #c2e9eb;
-}
+
 .header__main {
   display: flex;
   align-items: center;
   gap: 20px;
   justify-content: center;
   padding: 12px 24px;
+  box-shadow: 2px 2px 2px silver;
 }
 .header__menu {
   display: flex;
@@ -52,4 +51,9 @@
   background-color: white;
   border: 3px solid #6d28d2;
   padding: 15px;
+}
+
+
+.header__topColor{
+background-color: #c2e9eb;
 }
