--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -1,129 +1,139 @@
 .card {
-    width: 320px;
-    border: 1px solid #ddd;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    background-color: white;
-    border-top: #7c3aed 4px solid ;
-  }
+  width: 320px;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-top: #7c3aed 4px solid ;
+}
 
-  
 
-  .plan-card {
-    width: 320px;
-    border-left: #7c3aed 2px solid ;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    border-right:  #7c3aed 2px solid;
-    padding: 1.5rem;
-    overflow: hidden;
-    max-height: 180px; 
-    transition: max-height 0.4s ease, box-shadow 0.3s ease;
-    cursor: pointer;
-    border-top: #7c3aed 4px solid ;
-  }
-  
-  .plan-card:hover {
-    max-height: 489px;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.2);
-  }
-  
-  .plan-header {
-    display: flex;
-   flex-direction: column;
-    margin-bottom: 1rem;
-  }
-  
-  .plan-price {
-    margin-bottom: 1rem;
-  }
-  
-  .plan-button {
-    display: block;
-    width: 100%;
-    padding: 0.7rem;
-    background: #6c2bd9;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    margin-bottom: 1rem;
-    opacity: 0;
-    transform: translateY(10px);
-    transition: opacity 0.3s ease, transform 0.3s ease;
-  }
-  
-  .plan-features {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    gap: 0.5rem;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    justify-content: center;
-    flex-direction: column;
-    column-gap: 10px;
-  }
-  
-  .plan-card:hover .plan-button,
-  .plan-card:hover .plan-features {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  
-  .plan_text{
-    text-align: center;
-  }
 
-  .features_wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-     align-items: center;
-     column-gap: 10px;
-  }
+.plan-card {
+  width: 320px;
+  border-left: #7c3aed 2px solid ;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  border-right:  #7c3aed 2px solid;
+  padding: 1.5rem;
+  overflow: hidden;
+  max-height: 180px; 
+  transition: max-height 0.4s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+  border-top: #7c3aed 4px solid ;
+}
 
-  .heading_wrapper {
-    display: flex;
-    flex-direction: column;
-    column-gap:10px;
-  }
-  .heading_text {
-font-weight: 700;
-font-size: 30.9px;
-line-height: 40px;
-letter-spacing: -0.16px;
-vertical-align: middle; 
-  }
-  .heading_descrpt {
-font-weight: 400;
-font-size: 16.6px;
-line-height: 25.2px;
-letter-spacing: 0px;
-vertical-align: middle;
-color:rgba(89, 92, 115, 1) ;
-  }
+.plan-card:hover {
+  max-height: 489px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+}
 
-  .contents_wrapper{
-    display: flex;
-    gap: 30px;
-    
-  }
+.plan-header {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.plan-price {
+  margin-bottom: 1rem;
+}
+
+.plan-button {
+  display: block;
+  width: 100%;
+  padding: 0.7rem;
+  background: #6c2bd9;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.plan-features {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  gap: 0.5rem;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  justify-content: center;
+  flex-direction: column;
+  column-gap: 10px;
+}
+
+.plan-card:hover .plan-button,
+.plan-card:hover .plan-features {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.plan_text{
+  text-align: center;
+}
+
+.features_wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+}
+
+.heading_wrapper {
+  display: flex;
+  flex-direction: column;
+  column-gap:10px;
+}
+.heading_text {
+  font-weight: 700;
+  font-size: 30.9px;
+  line-height: 40px;
+  letter-spacing: -0.16px;
+  vertical-align: middle; 
+}
+.heading_descrpt {
+  font-weight: 400;
+  font-size: 16.6px;
+  line-height: 25.2px;
+  letter-spacing: 0px;
+  vertical-align: middle;
+  color:rgba(89, 92, 115, 1) ;
+}
+
+.contents_wrapper{
+  display: flex;
+  gap: 30px;
+  
+}
+
 .hero {
   padding: 64px 0 140px 0;
   background-image: url("/assets/hero\ main.png");
   background-repeat: no-repeat;
   background-position: center;
+  margin-top: 27px;
 }
 
 .hero__skills-box {
-    background-color: #fff;
-    padding: 24px;
-    max-width: 40%;
-    margin-left: 40px;
+  background-color: #fff;
+  padding: 24px;
+  max-width: 40%;
+  margin-left: 40px;
 }
 .hero__title {
-    font-size: 30px;
-    margin-bottom: 8px;
+  font-size: 30px;
+  margin-bottom: 8px;
+}
+
+.reimagine{
+  margin-top: 48px;
+}
+
+.top-reload-wrapper{
+ margin-top: 23px;
 }
