--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,8 @@ a {
 .contents_wrapper {
   display: flex;
   gap: 30px;
+  align-items: center;
+  align-content: center;
 }
 
 .hero {
@@ -281,6 +283,105 @@ a {
 
 button {
   cursor: pointer;
+}
+
+form {
+  max-width: 400px;
+  margin: 1rem auto;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-family: sans-serif;
+}
+
+label {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+input {
+  width: 100%;
+  padding: 0.5rem;
+  margin-top: 0.2rem;
+  box-sizing: border-box;
+}
+
+.error {
+  color: red;
+  font-size: 0.8rem;
+  height: 1rem;
+}
+
+.achievement_wrapper {
+  width: 1440px;
+  height: 441.25px;
+  top: 4375.64px;
+  left: -7.5px;
+  background: rgb(246, 247, 249);
+}
+
+.card_wrapper {
+  background-color: #fff;
+  max-width: 311px;
+  margin-top: 32px;
+  height: 273.25px;
+  border-radius: 8px;
+  border-width: 1px;
+}
+
+.card_wrapper:hover {
+  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.15), 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: 1.5s ease-in-out;
+}
+
+.card_content {
+  padding: 25px 25px;
+}
+
+.card_text {
+  margin-top: 16px;
+}
+
+.darker {
+  color: rgb(42, 43, 63);
+  font-weight: 700;
+  font-size: 13.7px;
+  line-height: 19.6px;
+  letter-spacing: 0px;
+  vertical-align: middle;
+}
+
+.purple {
+  color: rgb(109, 40, 210);
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 13.2px;
+  line-height: 19.6px;
+  letter-spacing: 0px;
+  vertical-align: middle;
+}
+
+.card_info {
+  margin-top: 19.19px;
+}
+
+.price_link {
+  margin-top: 28px;
+}
+
+.inner_wrapper {
+  position: relative;
+  top: 50px;
+  left: 75px;
+}
+
+.overflow_heading {
+  font-weight: 700;
+  font-size: 30.9px;
+  line-height: 40px;
+  letter-spacing: -0.16px;
+  vertical-align: middle;
 }
 
 .top-reload-wrapper {
