--- a/sass/blocks/_signUp.scss
+++ b/sass/blocks/_signUp.scss
@@ -49,7 +49,7 @@ input {
   box-shadow: 0 20px 25px rgba(0, 0, 0, 0.15),
   0 10px 10px rgba(0, 0, 0, 0.1);
 cursor: pointer;
-transition: 0.1s ease-in-out;
+transition: 0.7s ease-in-out;
 }
 
 .card_content {
@@ -78,15 +78,7 @@ transition: 0.1s ease-in-out;
 .card_info {
   margin-top: 19.19px;
 }
-.info_text {
 
-}
-.overflow_img {
-}
-.overflow {
-}
-.info_price {
-}
 .price_link {
   margin-top: 28px;
 }
@@ -105,16 +97,79 @@ transition: 0.1s ease-in-out;
   vertical-align: middle;
 }
 
-.signup-button.clean {
-  background-color: #4f46e5;
+.btn{
+  background: linear-gradient(135deg, #4f46e5, #3b82f6);
   color: white;
+  border: none;
   padding: 12px 24px;
   font-size: 16px;
-  border: none;
+  font-weight: 600;
   border-radius: 8px;
-  transition: background-color 0.3s;
   cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
-.signup-button.clean:hover {
-  background-color: #4338ca;
+
+.btn:hover{
+  background: linear-gradient(135deg, #4338ca, #2563eb); 
+  transform: translateY(-2px);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+}
+
+#signupForm{
+  background-color: rgba(255, 255, 255, 0.15);
+  padding: 40px;
+  border-radius: 20px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  width: 350px;
+}
+
+#name{
+  width: 100%;
+  padding: 12px;
+  background: none;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  font-size: 15px;
+  color: #333;
+  transition: 0.3s ease;
+}
+
+#email{
+  width: 100%;
+  padding: 12px;
+  background: none;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  font-size: 15px;
+  color: #333;
+  transition: 0.3s ease;
+}
+
+#password{
+  width: 100%;
+  padding: 12px;
+  background: none;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  font-size: 15px;
+  color: #333;
+  transition: 0.3s ease;
+}
+
+#confirmPassword{
+  width: 100%;
+  padding: 12px;
+  background: none;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  font-size: 15px;
+  color: #333;
+  transition: 0.3s ease;
 }
