--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,10 @@ ul {
   list-style: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 a {
   text-decoration: none;
 }
@@ -62,8 +66,8 @@ a {
 .header__main {
   display: flex;
   align-items: center;
-  gap: 20px;
   justify-content: center;
+  gap: 20px;
   padding: 12px 24px;
   box-shadow: 2px 2px 2px silver;
 }
@@ -71,8 +75,8 @@ a {
 .header__menu {
   display: flex;
   align-items: center;
-  gap: 20px;
   justify-content: center;
+  gap: 20px;
 }
 
 .header__link {
@@ -95,6 +99,11 @@ a {
   border-radius: 4px;
   padding: 15px;
   color: #6d28d2;
+  transition: 0.3s all linear;
+}
+
+.bi-list {
+  display: none;
 }
 
 .header__signup {
@@ -103,6 +112,7 @@ a {
   border-radius: 4px;
   color: white;
   padding: 15px;
+  transition: 0.3s all linear;
 }
 
 .header__space-btn {
@@ -113,6 +123,16 @@ a {
 
 .header__topColor {
   background-color: #c2e9eb;
+}
+
+.header__login:hover {
+  background-color: #6d28d2;
+  color: white;
+}
+
+.header__signup:hover {
+  background-color: white;
+  color: #6d28d2;
 }
 
 .hero {
@@ -127,9 +147,139 @@ a {
   padding: 24px;
   max-width: 40%;
   margin-left: 40px;
+  border-radius: 5px;
 }
 
 .hero__title {
   font-size: 30px;
   margin-bottom: 8px;
+}
+
+.reimagine__title {
+  font-size: 30px;
+  margin-bottom: 3px;
+}
+
+.reimagine {
+  padding: 48px 117px;
+}
+
+.reimagine__list-box {
+  border: 1px solid silver;
+  border-radius: 15px;
+  padding: 16px;
+}
+
+.reimagine__menu-boxes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 24px;
+}
+
+.reim__listbox-title {
+  margin: 16px 0 8px 0;
+}
+
+.reim__listbox-text {
+  margin: 0 0 16px 0;
+}
+
+.reim__listbox-texts {
+  display: flex;
+  align-items: center;
+  justify-content: 0;
+  gap: 10px;
+}
+
+.reimange__img {
+  max-width: 100%;
+}
+
+.listbox-text {
+  color: #d1d2e0;
+  border: 2px solid #d1d2e0;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.reimagine__all-accelators-btn {
+  padding: 11px 13px;
+  background-color: white;
+  color: #6d28d2;
+  border: 2px solid #6d28d2;
+  font-weight: bold;
+  border-radius: 10px;
+  margin-top: 24px;
+  transition: all linear 0.3s;
+}
+
+.reimagine__all-accelators-btn:hover {
+  background-color: #6d28d2;
+  color: white;
+  border: 2px solid #6d28d2;
+}
+
+.companies__title {
+  color: #595C73;
+  text-align: center;
+  margin: 63px 0 28px;
+}
+
+.companies__logos {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
+}
+
+@media only screen and (max-width: 1410px) {
+  #headerInput {
+    width: 460px;
+  }
+  .course-text {
+    text-align: left;
+  }
+}
+@media only screen and (max-width: 1310px) {
+  .header__menu {
+    display: none;
+  }
+  .bi-list {
+    display: block;
+  }
+  .br {
+    display: none;
+  }
+  .listbox-text {
+    font-size: 10px;
+  }
+}
+@media only screen and (max-width: 1085px) {
+  .reim__listbox-title {
+    font-size: 14px;
+  }
+  .reim__listbox-text {
+    font-size: 13px;
+  }
+}
+@media only screen and (max-width: 911px) {
+  .reim__listbox-title {
+    font-size: 12px;
+  }
+  .reim__listbox-text {
+    font-size: 10px;
+  }
+}
+@media only screen and (max-width: 905px) {
+  #headerInput {
+    width: 300px;
+  }
+}
+@media only screen and (max-width: 872px) {
+  .companies__logos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }/*# sourceMappingURL=style.css.map */
