--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -3,5 +3,11 @@
 @import "./main";
 @import "./footer";
 @import "./custom";
-@import "./media";
+
 @import "./detail";
+@import "./reimagine";
+@import "./companies";
+
+
+
+@import "./media";
