--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -7,20 +7,13 @@
   font-size: 15px;
 }
 
-
 .header__main {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  justify-content: center;
+  @include d-flex(center, 20px);
   padding: 12px 24px;
   box-shadow: 2px 2px 2px silver;
 }
 .header__menu {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  justify-content: center;
+  @include d-flex(center, 20px);
 }
 .header__link {
   color: #303141;
@@ -39,6 +32,10 @@
   border-radius: 4px;
   padding: 15px;
   color: #6d28d2;
+  transition: 0.3s all linear;
+}
+.bi-list {
+  display: none;
 }
 .header__signup {
   background-color: #6d28d2;
@@ -46,6 +43,7 @@
   border-radius: 4px;
   color: white;
   padding: 15px;
+  transition: 0.3s all linear;
 }
 .header__space-btn {
   background-color: white;
@@ -53,7 +51,14 @@
   padding: 15px;
 }
 
-
-.header__topColor{
-background-color: #c2e9eb;
+.header__topColor {
+  background-color: #c2e9eb;
+}
+.header__login:hover {
+  background-color: #6d28d2;
+  color: white;
+}
+.header__signup:hover {
+  background-color: white;
+  color: #6d28d2;
 }
