--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -1,10 +1,11 @@
 @import "./header";
 @import "./hero";
 @import "./signUp";
+@import "./ai";
+@import "./gpt";
 @import "./main";
 @import "./footer";
 @import "./custom";
-
 @import "./detail";
 @import "./reimagine";
 @import "./companies";
