--- a/css/style.css
+++ b/css/style.css
@@ -98,4 +98,141 @@ a {
 
 .focus-title {
   margin-bottom: 31px;
+}
+
+.gpt-top-title {
+  font-size: 700;
+  font-weight: 700;
+}
+
+.gpt-wrapper {
+  background-color: #F6F7F9;
+  padding: 48px 74px;
+}
+
+.line {
+  width: 1465px;
+  height: 1px;
+  background-color: #D1D2E0;
+  margin-bottom: 32px;
+  margin-top: 17px;
+}
+
+.gpt-item {
+  width: 270px;
+}
+
+.special {
+  width: 310px;
+}
+
+.smallest {
+  width: 180px;
+}
+
+.bigger {
+  width: 410px;
+}
+
+.gpt-main {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.gpt-item-title {
+  margin-bottom: 16px;
+  font-size: 700;
+  font-weight: 700;
+}
+
+.sp {
+  font-size: 700;
+  font-weight: 700;
+  width: 230px;
+}
+
+.gpt-item-box {
+  margin-bottom: 16px;
+}
+
+.spm {
+  margin-bottom: 0px;
+}
+
+.gpt-item-link {
+  color: #6D28D2;
+  font-size: 700;
+  font-weight: 700;
+}
+
+.gpt-item-peoples {
+  color: #9194AC;
+}
+
+.gpt-item-btn {
+  background-color: white;
+  border: 1px solid #6D28D2;
+  color: #6D28D2;
+  padding: 12px 79px;
+  border-radius: 4px;
+  font-size: 700;
+  font-weight: 700;
+  transition: linear;
+}
+
+.gpt-item-btn:hover {
+  background-color: #6D28D2;
+  color: white;
+  transition: 0.5s;
+}
+
+.booz-wrapper {
+  margin-top: 50px;
+}
+
+.left {
+  padding-top: 64px;
+}
+
+.booz-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.booz-title {
+  margin-top: 32px;
+  margin-bottom: 32px;
+  font-size: 700;
+  font-weight: 700;
+}
+
+.booz-percentage-wrapper {
+  display: flex;
+  align-items: center;
+  width: 560px;
+  justify-content: space-between;
+}
+
+.booz-item {
+  width: 270px;
+}
+
+.booz-btn {
+  background-color: #6D28D2;
+  color: white;
+  font-size: 700;
+  font-weight: 700;
+  padding: 12px 35px 12px 12px;
+  border: none;
+  border-radius: 4px;
+  margin-top: 32px;
+  transition: linear;
+}
+
+.booz-btn:hover {
+  background-color: white;
+  color: #6D28D2;
+  transition: 0.5s;
+  border: 1px solid #6D28D2;
 }/*# sourceMappingURL=style.css.map */
