--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,52 @@ a {
   gap: 0;
 }
 
+.bi-star-fill {
+  color: #c4710d;
+}
+
+.lessons__star-number {
+  color: #c4710d;
+}
+
+.lessons__price {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
+}
+
+.lessons__star {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
+}
+
+.lessons_main_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+
+.lessons__btn {
+  background-color: #C2E9EB;
+  border: none;
+  padding: 5px;
+  color: #216265;
+  font-weight: 800;
+}
+
+.lessons__title {
+  font-size: 30px;
+  margin-bottom: 8px;
+}
+
+.lessons__text {
+  margin-bottom: 31px;
+}
+
 @media only screen and (max-width: 1410px) {
   #headerInput {
     width: 460px;
@@ -256,12 +302,23 @@ a {
     font-size: 10px;
   }
 }
+@media only screen and (max-width: 1360px) {
+  .lessons_main_wrapper {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 @media only screen and (max-width: 1085px) {
   .reim__listbox-title {
     font-size: 14px;
   }
   .reim__listbox-text {
     font-size: 13px;
+  }
+  .lessons__img {
+    width: 100%;
   }
 }
 @media only screen and (max-width: 911px) {
