--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -3,11 +3,10 @@
 @import "./main";
 @import "./footer";
 @import "./custom";
-
 @import "./detail";
 @import "./reimagine";
 @import "./companies";
-
+@import "./lessons";
 
 
 @import "./media";
