--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -22,6 +22,15 @@
     font-size: 10px;
   }
 }
+
+@media only screen and (max-width: 1360px) {
+  .lessons_main_wrapper {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap ;
+    justify-content: center;
+  }
+}
 @media only screen and (max-width: 1085px) {
   .reim__listbox-title {
     font-size: 14px;
@@ -29,18 +38,20 @@
   .reim__listbox-text {
     font-size: 13px;
   }
+.lessons__img {
+  width: 100%;
+}
 }
 
-
 @media only screen and (max-width: 911px) {
-    .reim__listbox-title {
-        font-size: 12px;
-      }
-      .reim__listbox-text {
-        font-size: 10px;
-      }
+  .reim__listbox-title {
+    font-size: 12px;
   }
-  
+  .reim__listbox-text {
+    font-size: 10px;
+  }
+}
+
 @media only screen and (max-width: 905px) {
   #headerInput {
     width: 300px;
@@ -50,9 +61,7 @@
   .companies__logos {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-   
   }
 }
-
 
 // header hero mediasi
