--- a/sass/blocks/_signUp.scss
+++ b/sass/blocks/_signUp.scss
@@ -136,6 +136,7 @@ transition: 0.7s ease-in-out;
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   width: 350px;
+  position: absolute;
 }
 
 #name{
