--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -2,6 +2,7 @@
 @import "./hero";
 @import "./signUp";
 @import "./ai";
+@import "./newPage";
 @import "./gpt";
 @import "./main";
 @import "./footer";
