--- a/css/style.css
+++ b/css/style.css
@@ -443,6 +443,7 @@ input {
           backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   width: 350px;
+  position: absolute;
 }
 
 #name {
@@ -540,6 +541,14 @@ input {
 
 .ai_img {
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
 }
 
 .top-reload-wrapper {
@@ -912,9 +921,10 @@ input {
 .card_content:hover {
   transform: translateY(-5px);
   transition: 0.4s;
+}
+
 .bi-star-fill {
   color: #c4710d;
-}
 }
 
 .lessons__star-number {
