--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -8,7 +8,7 @@
 .hero__skills-box {
     background-color: #fff;
     padding: 24px;
-    max-width: 40%;
+    width: 40%;
     margin-left: 40px;
     border-radius: 5px;
 }
