--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -8,6 +8,17 @@
     text-align: left;
   }
 }
+
+@media only screen and (max-width: 1360px) {
+  .lessons_main_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .lessons__main_box {
+    width: 50%;
+  }
+}
+
 @media only screen and (max-width: 1310px) {
   .header__menu {
     display: none;
@@ -21,16 +32,12 @@
   .listbox-text {
     font-size: 10px;
   }
-}
 
-@media only screen and (max-width: 1360px) {
-  .lessons_main_wrapper {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap ;
-    justify-content: center;
+  .header__btns {
+    display: none;
   }
 }
+
 @media only screen and (max-width: 1085px) {
   .reim__listbox-title {
     font-size: 14px;
@@ -38,9 +45,25 @@
   .reim__listbox-text {
     font-size: 13px;
   }
-.lessons__img {
-  width: 100%;
-}
+  .lessons__img {
+    width: 100%;
+  }
+  .reimagine__menu-boxes {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 0 auto;
+  }
+  .lessons_main_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+  }
+  .reimagine__list-box {
+    width: 50%;
+  }
+  .companies__logos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
 @media only screen and (max-width: 911px) {
@@ -50,6 +73,10 @@
   .reim__listbox-text {
     font-size: 10px;
   }
+  .lessons_main_wrapper {
+    display: grid;
+    grid-template-columns: 1fr  ;
+  }
 }
 
 @media only screen and (max-width: 905px) {
@@ -57,11 +84,12 @@
     width: 300px;
   }
 }
-@media only screen and (max-width: 872px) {
-  .companies__logos {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+@media only screen and (max-width: 789px) {
+  .hero__skills-box {
+    width: 70%;
   }
+}
+@media only screen and (max-width: 745px) {
 }
 
 // header hero mediasi
