--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,8 @@ input {
   border: 1px solid rgba(255, 255, 255, 0.18);
   width: 350px;
   position: absolute;
+  left: 900px;
+  top: 250px;
 }
 
 #name {
