--- a/sass/blocks/_signUp.scss
+++ b/sass/blocks/_signUp.scss
@@ -137,6 +137,8 @@ transition: 0.7s ease-in-out;
   border: 1px solid rgba(255, 255, 255, 0.18);
   width: 350px;
   position: absolute;
+  left: 900px;
+  top: 250px;
 }
 
 #name{
