--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -9,6 +9,12 @@
   }
 }
 
+@media only screen and (max-width: 1400px) {
+  .header__input {
+    width: 350px;
+  }
+}
+
 @media only screen and (max-width: 1360px) {
   .lessons_main_wrapper {
     display: grid;
@@ -36,6 +42,53 @@
   .header__btns {
     display: none;
   }
+  .contents_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .other_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .ai_wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+  }
+  .booz-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+  }
+  .focus-wrapper-main {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+  }
+  .gpt-main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .bi-three-dots-vertical {
+    display: block;
+  }
+  .profile__menu {
+    @include d-flex(0, 14px);
+    display: none;
+  }
+  .bi-list {
+    display: block;
+  }
+  .profile__header {
+    @include d-flex(0, 10px);
+  }
+  .courses__projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 @media only screen and (max-width: 1085px) {
@@ -55,7 +108,7 @@
   }
   .lessons_main_wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr ;
+    grid-template-columns: 1fr 1fr;
   }
   .reimagine__list-box {
     width: 50%;
@@ -64,8 +117,29 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
+  .footere__main-menu {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 }
 
+@media only screen and (max-width: 990px) {
+  .profile__hero-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    flex-direction: column;
+  }
+  .gpt-main {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .courses__projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
 @media only screen and (max-width: 911px) {
   .reim__listbox-title {
     font-size: 12px;
@@ -75,7 +149,7 @@
   }
   .lessons_main_wrapper {
     display: grid;
-    grid-template-columns: 1fr  ;
+    grid-template-columns: 1fr;
   }
 }
 
@@ -83,13 +157,38 @@
   #headerInput {
     width: 300px;
   }
+  .footer__career-skills {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 15px;
+  }
 }
+
+@media only screen and (max-width: 800px) {
+  .profile__icon-menu {
+    display: none;
+  }
+  .profile__header__link {
+    display: none;
+  }
+  .bi-search {
+    display: block;
+  }
+  .bi-cart3 {
+    display: block;
+  }
+  .header__input {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 789px) {
   .hero__skills-box {
     width: 70%;
   }
 }
-@media only screen and (max-width: 745px) {
-}
 
 // header hero mediasi
+
+// second header mediasi
