--- a/sass/blocks/_main.scss
+++ b/sass/blocks/_main.scss
@@ -28,12 +28,12 @@
 .focus-wrapper-main {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 1540px;
+  justify-content: center;
+  gap: 23px;
   background-color: #f6f7f9;
   margin-top: 50px;
   padding: 50px;
-  margin-right: 75px;
+  padding-left: 50px;
 }
 .focus-item {
   width: 530px;
@@ -46,6 +46,9 @@
   gap: 15px;
   margin-bottom: 16px;
   transition: linear;
+}
+.booz-right-img {
+  width: 100%;
 }
 .focus-item:hover {
   border: 1px solid $purple-color;
@@ -64,117 +67,121 @@
   margin-bottom: 31px;
 }
 
-
-.focus-title{
-    margin-bottom: 31px;
+.focus-title {
+  margin-bottom: 31px;
 }
-.gpt-top-title{
-    @include font(30px , 700);
+.gpt-top-title {
+  @include font(30px, 700);
 }
-.gpt-wrapper{
-    background-color: #F6F7F9;
-    padding: 48px 74px;
-    justify-content: center;
-    align-items: center;
-    width: 1292px;
+.focus-right-img {
+  width: 450px;
 }
-.line{
-    height: 1px;
-    background-color: #D1D2E0;
-    margin-bottom: 32px;
-    margin-top: 17px;
+.gpt-wrapper {
+  background-color: #f6f7f9;
+  padding: 48px 74px;
+  justify-content: center;
+  align-items: center;
 }
-.gpt-item{
-    width: 270px;
+.line {
+  height: 1px;
+  background-color: #d1d2e0;
+  margin-bottom: 32px;
+  margin-top: 17px;
 }
-.special{
-    width: 310px;
+.gpt-item {
+  width: 270px;
 }
-.smallest{
-    width: 180px;
+.special {
+  width: 310px;
 }
-.bigger{
-    width: 410px;
+.smallest {
+  width: 180px;
 }
-.gpt-main{
+.bigger {
+  width: 410px;
+}
+.gpt-main {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 40px;
 }
-.gpt-item-title{
-    margin-bottom: 16px;
-    @include font(24px , 700);
+.gpt-item-title {
+  margin-bottom: 16px;
+  @include font(24px, 700);
 }
-.sp{
-    @include font(31px , 700);
-    width: 230px;
+.sp {
+  @include font(31px, 700);
+  width: 230px;
 }
-.gpt-item-box{
-    margin-bottom: 16px;
+.gpt-item-box {
+  margin-bottom: 16px;
 }
-.spm{
-    margin-bottom: 0px;
+.spm {
+  margin-bottom: 0px;
 }
-.gpt-item-link{
-    color: $purple-color;
-    @include font(18px , 700)
+.gpt-item-link {
+  color: $purple-color;
+  @include font(18px, 700);
 }
-.gpt-item-peoples{
-    color: #9194AC;
+.gpt-item-peoples {
+  color: #9194ac;
 }
-.gpt-item-btn{
-    background-color: white;
-    border: 1px solid $purple-color;
-    color: $purple-color;
-    padding: 12px 79px;
-    border-radius: 4px;
-    @include font(13px , 700);
-    transition: linear;
+.gpt-item-btn {
+  background-color: white;
+  border: 1px solid $purple-color;
+  color: $purple-color;
+  padding: 12px 79px;
+  border-radius: 4px;
+  @include font(13px, 700);
+  transition: linear;
 }
-.gpt-item-btn:hover{
-    background-color: $purple-color;
-    color: white;
- transition: 0.5s;
+.gpt-item-btn:hover {
+  background-color: $purple-color;
+  color: white;
+  transition: 0.5s;
 }
-.booz-wrapper{
-    margin-top: 50px;
+.booz-wrapper {
+  margin-top: 50px;
 }
-.left{
-    padding-top: 64px;
+.left {
+  padding-top: 64px;
 }
-.booz-wrapper{
-    display: flex;
-    align-items: center;
+.booz-wrapper {
+  display: flex;
+  align-items: center;
 }
-.booz-title{
-    margin-top: 32px;
-    margin-bottom: 32px;
-    @include font(31px , 700)
+.booz-title {
+  margin-top: 32px;
+  margin-bottom: 32px;
+  @include font(31px, 700);
+}
+.booz-percentage-wrapper {
+  display: flex;
+  align-items: center;
+  width: 560px;
+  justify-content: space-between;
+}
+.booz-item {
+  width: 270px;
+}
+.booz-btn {
+  background-color: $purple-color;
+  color: white;
+  @include font(14px, 700);
+  padding: 12px 35px 12px 12px;
+  border: none;
+  border-radius: 4px;
+  margin-top: 32px;
+  transition: linear;
+}
+.booz-btn:hover {
+  background-color: white;
+  color: $purple-color;
+  transition: 0.5s;
+  border: 1px solid $purple-color;
+}
 
-}
-.booz-percentage-wrapper{
-    display: flex;
-    align-items: center;
-    width: 560px;
-    justify-content: space-between;
-}
-.booz-item{
-    width: 270px;
-}
-.booz-btn{
-    background-color: $purple-color;
-    color: white;
-    @include font(14px , 700);
-    padding: 12px 35px 12px 12px;
-    border: none;
-    border-radius: 4px;
-    margin-top: 32px;
-    transition: linear;
-}
-.booz-btn:hover{
-   background-color: white;
-   color: $purple-color;
-   transition: 0.5s;
-   border: 1px solid $purple-color;
+.contents_wrapper {
+  margin-bottom: 50px;
 }
