--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -3,6 +3,7 @@
 @import "./signUp";
 @import "./ai";
 @import "./newPage";
+@import "./premium";
 @import "./gpt";
 @import "./main";
 @import "./footer";
