--- a/sass/blocks/_newPage.scss
+++ b/sass/blocks/_newPage.scss
@@ -30,3 +30,179 @@ a{
 li{
     list-style: none;
 }
+
+.course-title {
+    margin-top: 48px;
+    margin-bottom: 24px;
+    font-family: Georgia;
+    font-weight: 700;
+    font-size: 30.88px;
+    line-height: 40px;
+    letter-spacing: -0.16px;
+}
+
+.course__viewed-title, .course__learn-title , .course-subtitle {
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28.8px;
+    letter-spacing: 0%;
+    margin-bottom: 10px;
+}
+
+.course__viewed-title--decoration {
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28.8px;
+    letter-spacing: 0%;
+    text-decoration: underline;
+    text-decoration-style: solid;
+    text-decoration-thickness: 0%;
+    text-decoration-skip-ink: auto;
+    color: #6d28d2;
+}
+
+.viewed-list {
+    padding-top: 16px;
+    padding-bottom: 48px;
+    display: flex;
+    align-items: stretch;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 236px;
+    height: 320px;
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    padding: 8px;
+    font-family: Roboto, sans-serif;
+    background-color: #fff;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
+.card__content {
+    margin-bottom: 8px;
+}
+
+.card__content img {
+    max-width: 236px;
+    max-height: 132px;
+    width: 100%;
+    height: auto;
+    border-radius: 4px;
+    object-fit: cover;
+    object-position: top;
+    display: block;
+}
+
+
+.card__title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19.2px;
+    margin-bottom: 4px;
+}
+
+.card__author {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16.8px;
+    color: #595C73;
+    margin-bottom: 4px;
+}
+
+.card__stars-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-size: 14px;
+    margin-bottom: 4px;
+}viewedList
+
+.card__rating {
+    font-weight: bold;
+    color: #b4690e;
+}
+
+.card__stars i {
+    color: #f4c150;
+    font-size: 12px;
+}
+
+.card__reviews {
+    color: #6a6f85;
+    font-size: 12px;
+}
+
+.card__price {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    margin-bottom: 6px;
+}
+
+.card__price--current {
+    color: #1c1d1f;
+    font-weight: bold;
+}
+
+.card__price--previous {
+    text-decoration: line-through;
+    color: #6a6f85;
+    font-size: 14px;
+}
+
+.card__badge {
+    background-color: #dff3ec;
+    color: #1e6055;
+    font-size: 12px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 4px 8px;
+    border-radius: 4px;
+}
+
+.features {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
+  border-top: 1px solid #dcdcdc;
+  border-bottom: 1px solid #dcdcdc;
+}
+
+.feature {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex: 1;
+}
+
+.feature__icon {
+  background-color: #e6e8f1;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.feature__icon img {
+  width: 16px;
+  height: 16px;
+}
+
+.feature__text {
+  font-size: 14px;
+  color: #333;
+}
+
+
