--- a/css/style.css
+++ b/css/style.css
@@ -428,6 +428,20 @@ input {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
+.homepage {
+  background: linear-gradient(135deg, #46e57b, #3bf65a);
+  color: white;
+  border: none;
+  padding: 12px 24px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
 .btn:hover {
   background: linear-gradient(135deg, #4338ca, #2563eb);
   transform: translateY(-2px);
@@ -443,9 +457,6 @@ input {
           backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   width: 350px;
-  position: absolute;
-  left: 900px;
-  top: 250px;
 }
 
 #name {
@@ -504,6 +515,10 @@ input {
   grid-template-rows: repeat(1, 1fr);
 }
 
+.div_wrapper {
+  margin-top: 400px;
+}
+
 .ai_wrapper {
   display: flex;
   justify-content: center;
@@ -553,8 +568,17 @@ li {
   list-style: none;
 }
 
+.swiper-button-prev, .swiper-button-next {
+  width: 60px !important;
+  height: 60px !important;
+  border-radius: 50%;
+  color: #fff !important;
+  background-color: #f3f3f3;
+  box-shadow: -4px 0px 6px 2px rgb(241, 241, 241);
+}
+
 .course-title {
-  margin-top: 48px;
+  margin-top: 90px;
   margin-bottom: 24px;
   font-family: Georgia;
   font-weight: 700;
@@ -570,6 +594,10 @@ li {
   line-height: 28.8px;
   letter-spacing: 0%;
   margin-bottom: 10px;
+}
+
+.course-subtitle {
+  margin-top: 80px;
 }
 
 .course__viewed-title--decoration {
@@ -1285,7 +1313,7 @@ input {
 .lessons__btn {
   background-color: #C2E9EB;
   border: none;
-  padding: 5px;
+  padding: 5px 0;
   color: #216265;
   font-weight: 800;
 }
@@ -1297,6 +1325,10 @@ input {
 
 .lessons__text {
   margin-bottom: 31px;
+}
+
+.lessons__price {
+  padding: 10px 10px;
 }
 
 @media only screen and (max-width: 1410px) {
