--- a/sass/blocks/_lessons.scss
+++ b/sass/blocks/_lessons.scss
@@ -21,7 +21,7 @@ gap: 50px;
 .lessons__btn {
     background-color: #C2E9EB;
     border: none;
-    padding: 5px;
+    padding: 5px 0;
     color: #216265;
     font-weight: 800;
 }
@@ -31,4 +31,15 @@ gap: 50px;
 }
 .lessons__text {
     margin-bottom: 31px;
+}
+
+.lessons__price {
+  padding: 10px 10px;
+}
+.price__now {
+  
+}
+.price__old {
+}
+.lessons__btn {
 }
