--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -4,6 +4,7 @@
 @import "./ai";
 @import "./newPage";
 @import "./premium";
+@import "./amin";
 @import "./gpt";
 @import "./main";
 @import "./footer";
